resume/styles/resume-template-1.css
body {
    font-family: Arial, sans-serif;
    line-height: 1.071;
}

h1 {
    font-size: 34px;
    font-weight: bold;
    border-bottom: none;
    padding-bottom: 0px;
    margin-bottom: 0px;
    text-align: center;
}

h2 {
    font-size: 26px;
    margin-top: 0px;
    margin-bottom: 0px;
    font-weight: bold;
}

h3 {
    font-size: 16px;
    margin-top: 0px;
    margin-bottom: 0px;
    font-weight: bold;
}

hr {
    margin-top: 5px;
}

p,
ul {
    margin-top: 0px;
    font-size: 14px;
}

strong {
    font-weight: bold;
}


.main-header {
    text-align: center;
    margin-bottom: 10px;
}

.main-header-title {
    font-size: 24px;
    font-weight: bold;
}

.section-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.company {
    font-size: 13px;
    font-style: italic;
}

.date {
    float: right;
    font-size: 12px;
    font-style: italic;
}

